@@ -1,4 +1,4 @@
-## $Id: Makefile.am 62162 2022-02-24 14:41:53Z takuji $
+## $Id: Makefile.am 62223 2022-02-27 10:34:32Z takuji $
 ## Makefile.am for the TeX Live subdirectory texk/dvipsk/
 ##
 ## Copyright 2017-2021 Karl Berry <tex-live@tug.org>
@@ -191,8 +191,10 @@ EXTRA_DIST += testdata/Makefile_upjf testdata/upjf.tex testdata/upjf.dvi testdat
               testdata/upjf_full.vf testdata/upjf_omit.vf \
               testdata/upjv.tfm testdata/upjv-g.tfm testdata/upjv-r.tfm \
               testdata/upjv_full.vf testdata/upjv_omit.vf \
+              testdata/upjf-g00.opl testdata/upjf-g00.ofm \
+              testdata/upjv-g00.opl testdata/upjv-g00.ofm \
               testdata/upjf_full.cnf testdata/upjf_omit.cnf
-DISTCLEANFILES += upjf.vf upjv.vf upjf_full.ps upjf_omit.ps
+DISTCLEANFILES += upjf.vf upjv.vf upjf-g.ofm upjv-g.ofm upjf_full.ps upjf_omit.ps
 
 EXTRA_DIST += \
 	NEWS \
