@@ -7,6 +7,8 @@ TEXFONTS="$srcdir/testdata;."
 SOURCE_DATE_EPOCH=1588474800
 export TEXFONTS SOURCE_DATE_EPOCH
 
+rm -f upjf.vf upjv.vf upjf-g.ofm upjv-g.ofm
+
 cp $srcdir/testdata/upjf_full.vf ./upjf.vf && \
 cp $srcdir/testdata/upjv_full.vf ./upjv.vf && \
 ./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map && \
@@ -14,6 +16,8 @@ mv upjf.ps upjf_full.ps || exit 1
 
 cp $srcdir/testdata/upjf_omit.vf ./upjf.vf && \
 cp $srcdir/testdata/upjv_omit.vf ./upjv.vf && \
+cp $srcdir/testdata/upjf-g00.ofm ./upjf-g.ofm && \
+cp $srcdir/testdata/upjv-g00.ofm ./upjv-g.ofm && \
 ./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map && \
 mv upjf.ps upjf_omit.ps || exit 2
 
