@@ -1,1 +1,4 @@
-#define luatex_svn_revision 7499
+#ifndef luatex_svn_revision_h
+#define luatex_svn_revision_h
+#define luatex_svn_revision 7501
+#endif
