@@ -1,3 +1,13 @@
+2022-02-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* tfmload.c:
+	Interpret FONTDIR RT in OFM as pTeX vertical writing.
+	https://github.com/texjporg/tex-jp-build/issues/135
+	* Makefile.{am,in}, uptex-vf.test,
+	testdata/Makefile_upjf, testdata/upjf-g00.{opl,ofm},
+	testdata/upjf-g00.{opl,ofm}:
+	Add a new test for pTeX & OFM FONTDIR.
+
 2022-02-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* Makefile.{am,in}, uptex-vf.test,
